# lets-build-agents

./: README.md  main.py  pyproject.toml  requirements.txt
api/: app.py  models.py
enterprise-rag/: 01-introduction.md  02-The-Problems-And-Limitation-Of-LLM.md  03-Enter-RAG.md  04-Implementing-Semantic-Rag.md  05-Add-RAGAS.md  06-Improvement-To-Hybrid-RAG-system.md  README.md  enter-RAG.md
scaffdoc/: README.md  pyproject.toml
scaffdoc/api/: app.py  dbconfig.py  model.py
